# backendcompython

./: aula5.py  main.py  pyproject.toml
Desenvolvimento Back-end I/: api_livros.py  app.py  teste.py
Introdução ao Desenvolvimento Back-End com Python/Estruturas de Dados e Algoritmos 1(I)- lv2/: Inverter_string.py  aprovado_reprovado_media_aluno.py  lista_palavras_ordenada.py  maior_numero.py  palindromo.py  par_ou_impar.py  soma_de_1_a_N.py  tabuada.py  tarefa_de_Estrutura_de_dados_I.py  teste.py
Introdução ao Desenvolvimento Back-End com Python/Estruturas de Dados e Algoritmos 2(II)- lv2/: array_de_intero__par.py  array_encontrar_elemento_unico.py  array_frequência_dicionario.py  array_numero_ausente.py  array_soma_de_elementos_unicos.py  array_soma_do_maior_com_menor.py  py.py  retorno_de_IP.py  segunda_tentativa_de_desenvolvimento_tarefa_de_Estrutura_de_dados_II.py  string_manipulação.py  tarefa_de_Estrutura_de_dados_II.py  teste.py
Introdução ao Desenvolvimento Back-End com Python/Estruturas de Dados e Algoritmos 3(III)- lv2/: biblioteca_raiz_quadrada.py  elemento_majoritario.py  frequncia_no_array_dic.py  ilustra_a_manipulação_de_strings_e_arrays.py  letras_maiúsculas_em_string.py  medi_de_salario_exeto_maior_menor.py  retonar_ultima_palvra_da_string.py  soma_acumulada.py  string_manipulação.py  tarefa_de_dados_e_algoritmos_III.py  teste - Copia (2).py  teste - Copia (3).py  teste - Copia (4).py  teste - Copia (9).py  teste - Copia.py  teste.py
Introdução ao Desenvolvimento Back-End com Python/Fundamentos de Orientação a Objetos (OO) lv3/: class_atributos.py  (+5 more)
(+20 files in other folders)
