[project]
name = "backendcompython"
version = "0.1.0"
description = ""
authors = [
    {name = "ciro rocha",email = "ciroreipersa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false